--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -1,42 +1,50 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
+
+.home-brage {
+  background: #0000008d;
 }
 
-.logo {
+.home-brage .header {
+  display: flex;
+}
+
+.home-brage .header .title {
+  margin-bottom: 0;
+  letter-spacing: 0.025rem;
+}
+
+.home-brage .header .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+.home-brage .header .logo:hover {
+  filter: drop-shadow(0 0 2em #64c6ff74);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home-brage .body {
+  position: relative;
+  top: -3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: max-content;
+  gap: 3rem;
+  margin-left: 9rem;
+  margin-top: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.home-brage .body .subtitle {
+  font-size: 1rem;
+  font-style: italic;
+  font-weight: 500;
+  letter-spacing: 0.025rem;
+  opacity: 0.8;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.home-brage .body .navigator {
+  font-style: italic;
+  color: #64c6ff74;
 }
